# compare-html

./: Dockerfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yaml  docker.yml  format.yaml  pip.yaml  pypi.yaml  test.yaml
src/htmlcmp/: compare_output.py  compare_output_server.py  html_render_diff.py  tidy_output.py
tests/: test1.html  test2.html  test_html_render_diff.py
