[project]
name = "compare-html"
version = "1.0.0"
description = "Compare HTML files by rendered output"
classifiers = []
authors = [
    {name = "Andreas Stefl"},
]
maintainers = [
    {name = "Andreas Stefl", email="stefl.andreas@gmail.com"},
]
requires-python = ">=3.7"
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.scripts]
compare-html = "compare-html.compare_output:main"
compare-html-server = "compare-html.compare_output_server:main"
html-render-diff = "compare-html.html_render_diff:main"
html-tidy = "compare-html.tidy_output:main"

[project.urls]
homepage = "https://opendocument.app/"
source = "https://github.com/opendocument-app/compare-html"
download = "https://pypi.org/project/pyodr/#files"
tracker = "https://github.com/opendocument-app/compare-html/issues"
"release notes" = "https://github.com/opendocument-app/compare-html/releases"

[build-system]
requires = [
    "Pillow",
    "selenium",
    "flask",
    "watchdog",
]
build-backend = "setuptools.build_meta"
